--- a/02-yelp_scraper_final.ipynb
+++ b/02-yelp_scraper_final.ipynb
@@ -128,8 +128,8 @@
    "outputs": [],
    "source": [
     "# #finding business info and calling function\n",
-    "# for index in range(len(response['businesses'])):\n",
-    "#     scrape_business(response['businesses'][index], index==0) #whether or not this is the first restaurant in the file"
+    "for index in range(len(response['businesses'])):\n",
+    "    scrape_business(response['businesses'][index], index==0) #whether or not this is the first restaurant in the file"
    ]
   }
  ],
